// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:Link:LinkExternal matches the snapshot when format is desktopFooter 1`] = `
<a
  className="sc-bdVaJa hBwHoG"
  format="desktopFooter"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is desktopSection 1`] = `
<a
  className="sc-bdVaJa euoXJm"
  format="desktopSection"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is mobileFooter 1`] = `
<a
  className="sc-bdVaJa eSGoBA"
  format="mobileFooter"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is mobileSection 1`] = `
<a
  className="sc-bdVaJa euoXJm"
  format="mobileSection"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is tabletFooter 1`] = `
<a
  className="sc-bdVaJa mXtzG"
  format="tabletFooter"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is tabletSection 1`] = `
<a
  className="sc-bdVaJa euoXJm"
  format="tabletSection"
/>
`;
